--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: timeline_calendar
 description: "A new Flutter package project."
-version: 0.0.1
-homepage:
+version: 1.0.0
+homepage: "https://github.com/danielmaques/flutter_calendar?tab=readme-ov-file"
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
