--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  intl: ">=0.17.0 <0.19.0"
-  scrollable_positioned_list: ^0.3.5
+  intl: ^0.19.0
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
